--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "lodash": "^4.17.21",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
